org.aion.avm.core/test/org/aion/avm/core/rejection/RejectClass31Variables.java
package org.aion.avm.core.rejection;


/**
 * This will pass since it has 31 instance variables (inherits from RuntimeException just to demonstrate we don't inherit any for limit purposes).
 * More than 31 static variables is ok.
 */
public class RejectClass31Variables extends RuntimeException {
    public static int static1;
    public static int static2;
    public static int static3;
    public static int static4;
    public static int static5;
    public static int static6;
    public static int static7;
    public static int static8;
    public static int static9;
    public static int static10;
    public static int static11;
    public static int static12;
    public static int static13;
    public static int static14;
    public static int static15;
    public static int static16;
    public static int static17;
    public static int static18;
    public static int static19;
    public static int static20;
    public static int static21;
    public static int static22;
    public static int static23;
    public static int static24;
    public static int static25;
    public static int static26;
    public static int static27;
    public static int static28;
    public static int static29;
    public static int static30;
    public static int static31;
    public static int static32;
    public static int static33;

    public int var1;
    public int var2;
    public int var3;
    public int var4;
    public int var5;
    public int var6;
    public int var7;
    public int var8;
    public int var9;
    public int var10;
    public int var11;
    public int var12;
    public int var13;
    public int var14;
    public int var15;
    public int var16;
    public int var17;
    public int var18;
    public int var19;
    public int var20;
    public int var21;
    public int var22;
    public int var23;
    public int var24;
    public int var25;
    public int var26;
    public int var27;
    public int var28;
    public int var29;
    public int var30;
    public int var31;

    public static byte[] main() {
        return new byte[] { 1 };
    }
}
